force-app/main/default/objects/Space__c/fields/Arre__c.field-meta.xml
<CustomField>
    <fullName>Arre__c</fullName>
    <label>Arrears</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>