force-app/main/default/objects/Space__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <label>Center</label>
    <referenceTo>Center__c</referenceTo>
    <relationshipLabel>Spaces</relationshipLabel>
    <relationshipName>Spaces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>