force-app/main/default/objects/Space__c/fields/Is_Vacant__c.field-meta.xml
<CustomField>
    <fullName>Is_Vacant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Vacant?</label>
    <type>Checkbox</type>
</CustomField>