force-app/main/default/objects/Space__c/fields/Shop_ID__c.field-meta.xml
<CustomField>
    <fullName>Shop_ID__c</fullName>
    <label>Shop ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>