force-app/main/default/objects/Space__c/fields/Shop_Sq_Meters__c.field-meta.xml
<CustomField>
    <fullName>Shop_Sq_Meters__c</fullName>
    <label>Shop Sq Meters</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>