force-app/main/default/objects/Space__c/fields/Space_Type__c.field-meta.xml
<CustomField>
    <fullName>Space_Type__c</fullName>
    <label>Space Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>Kids Play</fullName>
            </value>
            <value>
                <fullName>Food Court</fullName>
            </value>
            <value>
                <fullName>Groceries</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Automobile company</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>